syntax = "proto3";
option java_multiple_files = true;
package no.nav.tekniskdemo.person;

message PersonId {
    string id = 1;
}

message Person {
    PersonId id = 1;
    string name = 2;
}

message PersonRequest {
    string name = 1;
}


service PersonService {
    rpc createPerson(PersonRequest) returns (Person) {}
    rpc getPerson(PersonId) returns (Person) {}
}


